updated paragraph info

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Developer</h3>
                             <div class="subheading mb-3">Personal Hobby</div>
-                            <p>Utilized web development tools including JavaScript, HTML5, CSS and Bootstrap to create personal portfoilo websites.</p>
+                            <p>Utilised Bootstrap library for JavaScript, HTML and CSS. Included responsive web design and accessibility practises. Managed Firebase and Google Cloud Platform (GCP) for backend.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2022</span></div>
                     </div>
