updated as of jan 22, 2022
updated the paragraph section of 'Experience'

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <h3 class="mb-0">Part-time Junior DevOps Intern</h3>
                             <div class="subheading mb-3">Sunstone Solutions</div>
                             
-                            <p>Helped manage the operations of computer systems utilizing RedHat and Debian operating systems. Maintained, created user accounts and managed networking using Linux tools and command-line interface tools. Utilized Ansible to automate tasks. Used git to merge and commit updates.</p>
+                            <p>Created and managed Docker containers. Helped manage the operations of computer systems utilizing RedHat and Debian operating systems. Maintained, created user accounts and managed networking using Linux tools and command-line interface tools. Utilized Ansible to automate tasks. Used git to merge and commit updates.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
                     </div>
