--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                         (647) 907-8698 ·
                         <a href="mailto:vsandru4@gmail.com">vsandru4@gmail.com</a>
                     </div>
-                    <p class="lead">My older brother paid me $50 in middle school to install Linux, and here I am!</p>
-                    <p class="lead mb-5">(without the $50)</p>
+                    <p class="lead mb-5">My older brother paid me $50 in middle school to install Linux, and here I am!<br>(without the $50)</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/victor-sandru-713526199/" target="_blank" rel="noreferrer"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/victorsandru" target="_blank" rel="noreferrer"><i class="fab fa-github"></i></a>
