--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/assets/victorSandru01-22-2022.pdf" target="_blank" rel="noreferrer">Resumé</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/assets/victorsandru.pdf" target="_blank" rel="noreferrer">Resumé</a></li>
                 </ul>
             </div>
         </nav>
