updated resume + skills

--- a/index.html
+++ b/index.html
@@ -147,15 +147,16 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-docker"></i></li>
                         <li class="list-inline-item"><i class="fab fa-git"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-linux"></i></li>
                         <li class="list-inline-item"><i class="fab fa-redhat"></i></li>
                         <li class="list-inline-item"><i class="fab fa-ubuntu"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-raspberry-pi"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-docker"></i></li>
                         <li class="list-inline-item"><img src="assets/img/ansible-2.png" style="padding-bottom: 10px;"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workstyle</div>
